使用更先进的方式加载mirai核心
代价是日志输出变多和无法直接使用mcl下载的mirai